<resources>
    <string name="app_name">BikeRoute</string>
    <string name="routes">Routes</string>
    <string name="account">Account</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="new_route">New Route</string>
    <string name="route_name">Route Name</string>
    <string name="start_latitude">Start Latitude</string>
    <string name="end_latitude">End Latitude</string>
    <string name="start_longitude">Start Longitude</string>
    <string name="end_longitude">End Longitude</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login (email address)</string>
    <string name="prompt_password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
